--- a/index.html
+++ b/index.html
@@ -11,7 +11,45 @@
   </section>
   <section class='email'>
     <h2>Sign up for Updates</h2>
-    <!-- /Email sign up -->
+    <div id='mc_embed_signup'>
+      <form action='//ttragram.us16.list-manage.com/subscribe/post?u=7bc1fe88520458fcb25ea043b&amp;amp;id=54fb80b5df' class='validate' id='mc-embedded-subscribe-form' method='post' name='mc-embedded-subscribe-form' novalidate target='_blank'>
+        <div id='mc_embed_signup_scroll'>
+          <div class='indicates-required'>
+            <span class='asterisk'>*</span>
+            indicates required
+          </div>
+          <div class='mc-field-group'>
+            <label for='mce-EMAIL'>
+              Email Address
+              <span class='asterisk'>*</span>
+            </label>
+            <input class='required email' id='mce-EMAIL' name='EMAIL' type='email' value=''>
+          </div>
+          <div class='mc-field-group'>
+            <label for='mce-FNAME'>First Name</label>
+            <input class='' id='mce-FNAME' name='FNAME' type='text' value=''>
+          </div>
+          <div class='mc-field-group'>
+            <label for='mce-LNAME'>Last Name</label>
+            <input class='' id='mce-LNAME' name='LNAME' type='text' value=''>
+          </div>
+          <div id='mce-responses'>
+            <div class='response' id='mce-error-response' style='display:none'></div>
+            <div class='response' id='mce-success-response' style='display:none'></div>
+          </div>
+          <div aria-hidden='true' style='position: absolute; left: -5000px;'>
+            <input name='b_7bc1fe88520458fcb25ea043b_54fb80b5df' tabindex='-1' type='text' value=''>
+          </div>
+          <div class='clear'>
+            <input class='button' id='mc-embedded-subscribe' name='subscribe' type='submit' value='Subscribe'>
+          </div>
+          <script src='//s3.amazonaws.com/downloads.mailchimp.com/js/mc-validate.js' type='text/javascript'></script>
+          <script>
+            (function($) {window.fnames = new Array(); window.ftypes = new Array();fnames[0]='EMAIL';ftypes[0]='email';fnames[1]='FNAME';ftypes[1]='text';fnames[2]='LNAME';ftypes[2]='text';}(jQuery));var $mcj = jQuery.noConflict(true);)
+          </script>
+        </div>
+      </form>
+    </div>
   </section>
   <section class='social'>
     <h2>Find us on social media</h2>
