--- a/index.html
+++ b/index.html
@@ -5,9 +5,11 @@
 </head>
 <body>
   <section class='feature'>
-    <img class='feature__logo' src='media/tetragramglyph.png'>
-    <h1>Tetragram</h1>
-    <p>The secret ingredient for small dispenseries.</p>
+    <div class='feature__overlay'>
+      <img class='feature__logo' src='media/tetragramglyph.png'>
+      <h1 class='feature__headline'>Tetragram</h1>
+      <h3 class='feature__tagline'>The secret ingredient for small dispenseries.</h3>
+    </div>
   </section>
   <section class='email'>
     <h2>Sign up for Updates</h2>
