Most of the styling for mobile

--- a/index.html
+++ b/index.html
@@ -12,14 +12,11 @@
     </div>
   </section>
   <section class='email'>
-    <h2>Sign up for Updates</h2>
+    <h2>Sign up for Email Updates</h2>
+    <p>We don't sell email addresses. We send emails infrequently.</p>
     <div id='mc_embed_signup'>
       <form action='//ttragram.us16.list-manage.com/subscribe/post?u=7bc1fe88520458fcb25ea043b&amp;amp;id=54fb80b5df' class='validate' id='mc-embedded-subscribe-form' method='post' name='mc-embedded-subscribe-form' novalidate target='_blank'>
         <div id='mc_embed_signup_scroll'>
-          <div class='indicates-required'>
-            <span class='asterisk'>*</span>
-            indicates required
-          </div>
           <div class='mc-field-group'>
             <label for='mce-EMAIL'>
               Email Address
@@ -28,11 +25,17 @@
             <input class='required email' id='mce-EMAIL' name='EMAIL' type='email' value=''>
           </div>
           <div class='mc-field-group'>
-            <label for='mce-FNAME'>First Name</label>
+            <label for='mce-FNAME'>
+              First Name
+              <span class='email__optional'>Optional</span>
+            </label>
             <input class='' id='mce-FNAME' name='FNAME' type='text' value=''>
           </div>
           <div class='mc-field-group'>
-            <label for='mce-LNAME'>Last Name</label>
+            <label for='mce-LNAME'>
+              Last Name
+              <span class='email__optional'>Optional</span>
+            </label>
             <input class='' id='mce-LNAME' name='LNAME' type='text' value=''>
           </div>
           <div id='mce-responses'>
@@ -53,8 +56,12 @@
       </form>
     </div>
   </section>
-  <section class='social'>
-    <h2>Find us on social media</h2>
-  </section>
-  <footer>&copy; 2017 Interactive Merchant Services. All rights reserved.</footer>
+  <footer>
+    &copy; 2017 Interactive Merchant Services. All rights reserved.
+    <div class='social-icons'>
+      <a class='icon-social-instagram' href='https://www.instagram.com/ttragram/'></a>
+      <a class='icon-social-facebook' href='https://www.facebook.com/ttragram'></a>
+      <a class='icon-social-twitter' href='https://twitter.com/ttragram/'></a>
+    </div>
+  </footer>
 </body>
