Finished static styling, next animations and ga

--- a/index.html
+++ b/index.html
@@ -6,9 +6,13 @@
 <body>
   <section class='feature'>
     <div class='feature__overlay'>
-      <img class='feature__logo' src='media/tetragramglyph.png'>
-      <h1 class='feature__headline'>Tetragram</h1>
+      <h1 class='feature__headline'>
+        <img class='feature__logo' src='media/tetragramglyph.png'>
+        Tetragram
+      </h1>
       <h3 class='feature__tagline'>The secret ingredient for small dispenseries.</h3>
+      <p class='feature__about'>We combine intelligent, human point of sale software with detailed and rigorous compliance reporting to take the guesswork out of running a dispensary.</p>
+      <p class='feature__about'>We're currently in research and planning and will be in alpha by early 2018.</p>
     </div>
   </section>
   <section class='email'>
