--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <head>
   <title>Tetragram</title>
   <link href='style.css' rel='stylesheet' type='text/css'>
+  <meta content='width=device-width, initial-scale=1' name='viewport'>
 </head>
 <body>
   <section class='feature'>
