--- a/index.html
+++ b/index.html
@@ -16,9 +16,8 @@
         <img class='feature__logo' src='media/tetragramglyph.png'>
         Tetragram
       </h1>
-      <h3 class='feature__tagline'>The secret ingredient for small dispenseries.</h3>
-      <p class='feature__about'>We combine intelligent, human point of sale software with detailed and rigorous compliance reporting to take the guesswork out of running a dispensary.</p>
-      <p class='feature__about'>We're currently in research and planning and will be in alpha by early 2018.</p>
+      <h3 class='feature__tagline'>Understanding cannabis is getting easier.</h3>
+      <p class='feature__about'>We're empowering medical & recreational customers to record their personal experiences with cannabis through smart software.</p>
     </div>
   </section>
   <section class='email'>
