--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
   <title>Tetragram</title>
   <link href='style.css' rel='stylesheet' type='text/css'>
   <meta content='width=device-width, initial-scale=1' name='viewport'>
+  <link href='/favicon.ico' rel='shortcut icon'>
   <script>
     (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){(i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)})(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
     ga('create', 'UA-102656117-1', 'auto');
@@ -13,7 +14,7 @@
   <section class='feature'>
     <div class='feature__overlay'>
       <h1 class='feature__headline'>
-        <img class='feature__logo' src='media/tetragramglyph.png'>
+        <img class='feature__logo' src='/img/tetragramglyph.png'>
         Tetragram
       </h1>
       <h3 class='feature__tagline'>Understanding cannabis is getting easier.</h3>
