--- a/index.html
+++ b/index.html
@@ -11,14 +11,13 @@
   </script>
 </head>
 <body>
+  <header>
+    <img class='logo' src='/img/tetragram-logo.png'>
+  </header>
   <section class='feature'>
     <div class='feature__overlay'>
-      <h1 class='feature__headline'>
-        <img class='feature__logo' src='/img/tetragramglyph.png'>
-        Tetragram
-      </h1>
-      <h3 class='feature__tagline'>Understanding cannabis is getting easier.</h3>
-      <p class='feature__about'>We're empowering medical & recreational customers to record their personal experiences with cannabis through smart software.</p>
+      <h3 class='feature__tagline'>Pain management is getting easier.</h3>
+      <p class='feature__about'>We're empowering medical customers to record their personal experiences with pain management through smart software.</p>
     </div>
   </section>
   <section class='email'>
