--- a/index.html
+++ b/index.html
@@ -1,76 +1,241 @@
 <!DOCTYPE html>
-<head>
-  <title>Tetragram</title>
-  <link href='style.css' rel='stylesheet' type='text/css'>
-  <meta content='width=device-width, initial-scale=1' name='viewport'>
-  <link href='/favicon.ico' rel='shortcut icon'>
-  <script>
-    (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){(i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)})(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
-    ga('create', 'UA-102656117-1', 'auto');
-    ga('send', 'pageview');
-  </script>
-</head>
+<html>
+<title>Tetragram</title>
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1">
+<link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
+<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Raleway">
+<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.2.0/css/all.css">
+<style>
+body,h1,h2,h3,h4,h5,h6 {font-family: "Raleway", sans-serif}
+body, html {
+    height: 100%;
+    line-height: 1.8;
+}
+/* Full height image header */
+.bgimg-1 {
+    background-position: center;
+    background-size: cover;
+    background-image: url("img/phone-user.jpg");
+    min-height: 100%;
+}
+.w3-bar .w3-button {
+    padding: 16px;
+}
+</style>
 <body>
-  <header>
-    <img class='logo' src='/img/tetragram-logo.png'>
-  </header>
-  <section class='feature'>
-    <div class='feature__overlay'>
-      <h3 class='feature__tagline'>Pain management is getting easier.</h3>
-      <p class='feature__about'>We're empowering medical customers to record their personal experiences with pain management through smart software.</p>
+
+<!-- Nav bar -->
+<div class="w3-top">
+  <div class="w3-bar w3-white w3-card" id="myNavbar">
+    <a href="#home" class="w3-bar-item w3-button w3-wide"><IMG SRC="img/tetragram-logo.png" ALT="Tetragram Logo" WIDTH=120 HEIGHT=40></a>
+    <!-- Right-sided navbar -->
+    <div class="w3-right w3-hide-small">
+      <a href="#home" class="w3-bar-item w3-button"><i class="fa fa-home"></i> Home</a>
+      <a href="#why" class="w3-bar-item w3-button"><i class="fas fa-question"></i> The Problem</a>
+      <a href="#about" class="w3-bar-item w3-button"><i class="fas fa-check-double"></i> The Solution</a>
+      <a href="#features" class="w3-bar-item w3-button"><i class="fas fa-mobile-alt"></i> App Features</a>
+      <a href="#contact" class="w3-bar-item w3-button"><i class="far fa-envelope-open"></i> Contact</a>
     </div>
-  </section>
-  <section class='email'>
-    <h2>Sign up for Email Updates</h2>
-    <p>We don't sell email addresses. We send emails infrequently.</p>
-    <div id='mc_embed_signup'>
-      <form action='//ttragram.us16.list-manage.com/subscribe/post?u=7bc1fe88520458fcb25ea043b&amp;amp;id=54fb80b5df' class='validate' id='mc-embedded-subscribe-form' method='post' name='mc-embedded-subscribe-form' novalidate target='_blank'>
+    <!-- small screen -->
+
+    <a href="javascript:void(0)" class="w3-bar-item w3-button w3-right w3-hide-large w3-hide-medium" onclick="w3_open()">
+      <i class="fa fa-bars"></i>
+    </a>
+  </div>
+</div>
+
+<!-- Sidebar small screens -->
+<nav class="w3-sidebar w3-bar-block w3-black w3-card w3-animate-left w3-hide-medium w3-hide-large" style="display:none" id="mySidebar">
+  <a href="javascript:void(0)" onclick="w3_close()" class="w3-bar-item w3-button w3-large w3-padding-16">Close ×</a>
+  <a href="#home" onclick="w3_close()" class="w3-bar-item w3-button">Homet</a>
+  <a href="#why" onclick="w3_close()" class="w3-bar-item w3-button">Why</a>
+  <a href="#about" onclick="w3_close()" class="w3-bar-item w3-button">About</a>
+  <a href="#features" onclick="w3_close()" class="w3-bar-item w3-button">App Features</a>
+  <a href="#contact" onclick="w3_close()" class="w3-bar-item w3-button">Contact</a>
+</nav>
+
+<!-- Header  -->
+<header class="bgimg-1 w3-display-container w3-grayscale-min" id="home">
+  <div class="w3-display-left w3-text-white" style="padding:48px">
+    <span class="w3-jumbo w3-hide-small">Empowered by Remedy.</span><br>
+    <span class="w3-xxlarge w3-hide-large w3-hide-medium">For Medicinal and Recreational Users</span><br>
+    <span class="w3-large">We are empowering cannabis users to record their experiences </br> with personalized smart software.</span>
+    <p><a href="#why" class="w3-button w3-white w3-padding-large w3-large w3-margin-top w3-opacity w3-hover-opacity-off">Learn more</a></p>
+  </div>
+  <div class="w3-display-bottomleft w3-text-grey w3-large" style="padding:24px 48px">
+    <a href='https://www.facebook.com/ttragram'><i class="fab fa-facebook-square w3-hover-opacity"></i></a>
+    <a href='https://www.instagram.com/ttragram/'><i class="fab fa-instagram w3-hover-opacity"></i></a>
+    <a href='https://twitter.com/ttragram'><i class="fab fa-twitter-square w3-hover-opacity"></i></a>
+    <a href='https://www.linkedin.com/company/tetragram/'><i class="fab fa-linkedin w3-hover-opacity"></i></a>
+  </div>
+</header>
+
+<!-- About the Problem Section-->
+<div class="w3-row-padding w3-padding-64 w3-theme-l1" id="why">
+
+<div class="w3-third">
+<h2 class="w3-border-teal w3-bottombar">The Problem.</h2>
+<IMG SRC="img/get-budding-72798.jpg" ALT="A person carefully weighing cannabis" WIDTH=600 HEIGHT=250>
+<p>There are hundreds of different cannabis strains and numerous ways cannabis can be consumed. With so many options to choose from, it makes deciding which cannabis strain will work best or achieve a particular affect, extremely difficult.</p>
+</div>
+
+<div class="w3-third">
+<div class="w3-card w3-white">
+  <div class="w3-container">
+  <h3 class="w3-opacity w3-xxlarge">Medical Use</h3>
+  <p>Patients utilizing medical cannabis often find themselves on a journey of self-diagnosis. Deciding which cannabis strain will work best in treating an ailment can be intimidating for even the most seasoned cannabis user. </br></br>Cannabis effects everyone differently and consequently even expert recommendations can be unreliable.</p>
+  <p class="w3-xlarge w3-text-green w3-xlarge">The average dispensary in mature markets sees between 100 - 350 customers a day.</p>
+  <p>This makes it nearly impossible for a budtender to provide a consultative approach in helping a patient find a strain that will address their specific medical needs.</p>
+  </div>
+  </div>
+</div>
+
+<div class="w3-third">
+<div class="w3-white">
+  <div class="w3-container">
+  <h3 class="w3-opacity w3-xxlarge">Recreational Use</h3>
+  <p>Although recreational users are more accustomed to the different cannabis strains, it is often a daunting task to track and remember the effects and/or preferences of each. </p>
+  <p class="w3-xlarge w3-text-red">Recall is never 100% as memories of one-off experiences fade.</p>
+  <p>Tetragram enables users to track and journal their experiences and make more informed purchases based on their preferences. </br></br>Buying bud can be smart shopping.</p>
+  </div>
+  </div>
+</div>
+
+</div>
+
+<!-- about the solution continued -->
+
+<div class="w3-row-padding w3-padding-64 w3-theme-l1 w3-light-grey" id="about">
+  <div class="w3-third">
+  <h2 class="w3-border-teal w3-bottombar">The Solution. Tetragram. </h2>
+  <p>Tetragram is designed to empower and enable recreational users and medical patients to journal their experiences. </br></br>For example, patients can list their symptoms and journal each treatment. One can list whether they smoked, ate or used a topical solution. </br></br>Since everyone's reaction and experience with cannabis is different, Tetragram creates a personal journal backed by data. </p>
+  </div>
+
+  <div class="w3-third">
+  <div class="w3-card w3-light-grey">
+    <div class="w3-container">
+    <p>For medical patients, this data will help patients focus more on the process of using cannabis as a method of treatment and tailoring it to the individual.  </br></br>The goal of Tetragram is to enable patients and simplify the process of self-diagnosis; making cannabis more affable for both patients and the medical community. Tetragram affords recreational users the ability to journal their personal experience with different strains.  </br></br>Later version of the application will incorporate a social stream and allow users to create groups, share information and interact with others.  </br></br>Empowering the cannabis community with knowledge and insight.</p>
+    </div>
+    </div>
+  </div>
+
+  <div class="w3-third">
+  <div class="w3-light-grey">
+    <div class="w3-container">
+    <p>Tetragram is also communal. Users can list reviews and gather data on what strains are helpful for specific symptoms and/or they preferred.</br></br> A digital timeline of each individualized purchases and/or treatments can be utilized to help individuals draw conclusions of what works for them.  </br></br>By providing users with an easy, user friendly app that will record their personal experiences with cannabis, Tetragram removes the guess work. </br></br>The purpose of Tetragram is to help gather information on the attributes of strains and more effectively use that information to empower the cannabis community.
+</p>
+    </div>
+    </div>
+  </div>
+
+  </div>
+</div>
+
+<!-- features Section -->
+<div class="w3-container w3-padding-64 w3-white w3-center" id="features">
+  <h1 class="w3-jumbo"><b>Features</b></h1>
+  <p>Our mobile app will provide cannabis users the ability to log information regarding the strain they have purchased.</p>
+
+  <div class="w3-row" style="margin-top:64px">
+    <div class="w3-col s4">
+      <i class="fa fa-camera w3-text-orange w3-jumbo"></i>
+      <p>Take pictures of the products purchased.</p>
+    </div>
+    <div class="w3-col s4">
+      <i class="fa fa-list-ul w3-text-red w3-jumbo"></i>
+      <p>Select from a list of ailments, such as PTSD, epilepsy, chronic pain.</p>
+    </div>
+    <div class="w3-col s4">
+      <i class="fas fa-store-alt w3-text-amber w3-jumbo"></i>
+      <p>Select the dispensary where the product was purchased from.</p>
+    </div>
+  </div>
+
+  <div class="w3-row" style="margin-top:64px">
+    <div class="w3-col s4">
+      <i class="fa fa-shopping-cart w3-text-green w3-jumbo"></i>
+      <p>Select the strain purchased.</p>
+    </div>
+    <div class="w3-col s4">
+      <i class="fas fa-shapes w3-text-blue w3-jumbo"></i>
+      <p>Select the form of the cannabis being consumed.</p>
+    </div>
+    <div class="w3-col s4">
+      <i class="fas fa-greater-than w3-text-cyan w3-jumbo"></i>
+      <p>Select the method in which the product was consumed.</p>
+    </div>
+  </div>
+
+</div>
+
+<!-- Contact Section -->
+<div class="w3-container w3-padding-64 w3-theme-l1 w3-light-grey" id="contact">
+  <div class="w3-row">
+    <div class="w3-col m5">
+    <div class="w3-padding-16"><span class="w3-xlarge w3-border-teal w3-bottombar">Contact Us</span></div>
+      <p>Interested in being a beta tester? Media and have questions? Just want to chat? </br></br>Use the email below to reach us.</p>
+      <p><i class="fas fa-envelope-open w3-text-teal w3-xlarge"></i> info@ttragram.com</p>
+    </div>
+    <div class="w3-col m7">
+      <h4>Join Our Mailing List</h4>
+      <p>Get the latest in Tetragram News and Updates!</p>
+      <form action='//ttragram.us16.list-manage.com/subscribe/post?u=7bc1fe88520458fcb25ea043b&amp;amp;id=54fb80b5df' class='validate w3-container w3-card-4 w3-padding-16 w3-white' id='mc-embedded-subscribe-form' method='post' name='mc-embedded-subscribe-form' novalidate target='_blank'>
         <div id='mc_embed_signup_scroll'>
           <div class='mc-field-group'>
             <label for='mce-EMAIL'>
               Email Address
               <span class='asterisk'>*</span>
             </label>
-            <input class='required email' id='mce-EMAIL' name='EMAIL' type='email' value=''>
-          </div>
-          <div class='mc-field-group'>
-            <label for='mce-FNAME'>
-              First Name
-              <span class='email__optional'>Optional</span>
-            </label>
-            <input class='' id='mce-FNAME' name='FNAME' type='text' value=''>
-          </div>
-          <div class='mc-field-group'>
-            <label for='mce-LNAME'>
-              Last Name
-              <span class='email__optional'>Optional</span>
-            </label>
-            <input class='' id='mce-LNAME' name='LNAME' type='text' value=''>
-          </div>
-          <div id='mce-responses'>
-            <div class='response' id='mce-error-response' style='display:none'></div>
-            <div class='response' id='mce-success-response' style='display:none'></div>
-          </div>
-          <div aria-hidden='true' style='position: absolute; left: -5000px;'>
-            <input name='b_7bc1fe88520458fcb25ea043b_54fb80b5df' tabindex='-1' type='text' value=''>
-          </div>
-          <div class='clear'>
-            <input class='button' id='mc-embedded-subscribe' name='subscribe' type='submit' value='Subscribe'>
-          </div>
-          <script src='//s3.amazonaws.com/downloads.mailchimp.com/js/mc-validate.js' type='text/javascript'></script>
-          <script>
-            (function($) {window.fnames = new Array(); window.ftypes = new Array();fnames[0]='EMAIL';ftypes[0]='email';fnames[1]='FNAME';ftypes[1]='text';fnames[2]='LNAME';ftypes[2]='text';}(jQuery));var $mcj = jQuery.noConflict(true);)
-          </script>
-        </div>
-      </form>
+                <input class='w3-input w3-border required email' id='mce-EMAIL' name='EMAIL' type='email' value=''>
+              </div>
+              <div class='mc-field-group'>
+                <label for='mce-FNAME'>
+                  First Name
+                </label>
+                <input class='w3-input w3-border' id='mce-FNAME' name='FNAME' type='text' value=''>
+              </div>
+              <div class='mc-field-group'>
+                <label for='mce-LNAME'>
+                  Last Name
+                </label>
+                <input class='w3-input w3-border' id='mce-LNAME' name='LNAME' type='text' value=''>
+              </div>
+              <div id='mce-responses'>
+                <div class='response' id='mce-error-response' style='display:none'></div>
+                <div class='response' id='mce-success-response' style='display:none'></div>
+              </div>
+              <div aria-hidden='true' style='position: absolute; left: -5000px;'>
+                <input name='b_7bc1fe88520458fcb25ea043b_54fb80b5df' tabindex='-1' type='text' value=''>
+              </div>
+              <br>
+              <div class='clear'>
+                <input class='button w3-button w3-black' id='mc-embedded-subscribe' name='subscribe' type='submit' value='Subscribe'>
+              </div>
+              <script src='//s3.amazonaws.com/downloads.mailchimp.com/js/mc-validate.js' type='text/javascript'></script>
+              <script>
+                (function($) {window.fnames = new Array(); window.ftypes = new Array();fnames[0]='EMAIL';ftypes[0]='email';fnames[1]='FNAME';ftypes[1]='text';fnames[2]='LNAME';ftypes[2]='text';}(jQuery));var $mcj = jQuery.noConflict(true);)
+              </script>
+            </div>
+          </form>
+          <br>
+          <p><i class="fa fa-exclamation fa-fw w3-xxlarge w3-margin-right w3-text-teal"></i> We don't sell email addresses and send email infrequently.</p>
     </div>
-  </section>
-  <footer>
-    &copy; 2017 Interactive Merchant Services. All rights reserved.
-    <div class='social-icons'>
-      <a class='icon-social-instagram' href='https://www.instagram.com/ttragram/'></a>
-      <a class='icon-social-facebook' href='https://www.facebook.com/ttragram'></a>
-      <a class='icon-social-twitter' href='https://twitter.com/ttragram/'></a>
-    </div>
-  </footer>
+  </div>
+</div>
+
+<!-- Footer -->
+<footer class="w3-center w3-black w3-padding-64">
+  <a href="#home" class="w3-button w3-light-grey"><i class="fa fa-arrow-up w3-margin-right"></i>To the top</a>
+  <div class="w3-xlarge w3-section">
+    <a href='https://www.facebook.com/ttragram'><i class="fab fa-facebook-square w3-hover-opacity"></i></a>
+    <a href='https://www.instagram.com/ttragram/'><i class="fab fa-instagram w3-hover-opacity"></i></a>
+    <a href='https://twitter.com/ttragram'><i class="fab fa-twitter-square w3-hover-opacity"></i></a>
+    <a href='https://www.linkedin.com/company/tetragram/'><i class="fab fa-linkedin w3-hover-opacity"></i></a>
+    <br>
+  <p class="w3-small">    &copy; 2017 Interactive Merchant Services. All rights reserved. </p>
+  </div>
+</footer>
+
 </body>
+</html>
