--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@ body, html {
 </style>
 <body>
 
-<!-- Nav bar -->
+<!-- Navigation bar -->
 <div class="w3-top">
   <div class="w3-bar w3-white w3-card" id="myNavbar">
     <a href="#home" class="w3-bar-item w3-button w3-wide"><IMG SRC="img/tetragram-logo.png" ALT="Tetragram Logo" WIDTH=120 HEIGHT=40></a>
