--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@ body, html {
 <div class="w3-card w3-white">
   <div class="w3-container">
   <h3 class="w3-opacity w3-xxlarge">Medical Use</h3>
-  <p>Patients utilizing medical cannabis ofte100%ind themselves on a journey of self-diagnosis. Deciding which cannabis strain will work best in treating an ailment can be intimidating for even the most seasoned cannabis user. </br></br>Cannabis affects everyone differently and consequently even expert recommendations can be unreliable.</p>
+  <p>Patients utilizing medical cannabis often find themselves on a journey of self-diagnosis. Deciding which cannabis strain will work best in treating an ailment can be intimidating for even the most seasoned cannabis user. </br></br>Cannabis affects everyone differently and consequently even expert recommendations can be unreliable.</p>
   <p class="w3-xlarge w3-text-green w3-xlarge">The average dispensary in mature markets sees between 100 - 350 customers a day.</p>
   <p>This makes it nearly impossible for a budtender to provide a consultative approach in helping a patient find a strain that will address their specific medical needs.</p>
   </div>
