--- a/about.html
+++ b/about.html
@@ -79,11 +79,9 @@ body, html {
       <h3 class="w3-border-teal w3-bottombar">Problems Facing Dispensary Owners.</h3>
       <p>Dispensaries can only view a patient’s purchase history through
         their point-of-sale systems (POS) at their dispensary and have no
-        insight into the impact the product had on the patient. </p>
-  <p>We live in a digital age where everything we do is easily accessible
-    via our cellphone and we expect instant gratification. Paperback
-    journals are cumbersome, easily lost and forgotten.</p>
-<p class="w3-xlarge w3-text-green w3-xlarge">The average dispensary in mature markets sees between 100-350 customers a day.</p>
+        insight into the impact the product had on the patient.</p>
+      <p>Today, patients have two ways of keeping track of which cannabis products work best in addressing their ailments. The first is through memory, which we all know can be hit or miss. Second is by writing down the name of the product and its effect in the paperback journals provided by the dispensaries.</p>
+<p class="w3-xlarge w3-text-green">With the average dispensary seeing between 100-350 customers a day, it becomes very challenging for a budtender to provide a consultative approach for the patient.</p>
 <p>Most dispensaries use text messages to market new products and
 sales events; however, studies show patients do not engage with
 marketing of this kind, especially if they are receiving multiple text
@@ -94,16 +92,14 @@ habits.</p>
     <div class="w3-col m6">
       <br>
       <br>
-
-<h4 class="w3-xlarge w3-text-red">What the app can do:</h4>
+<h4 class="w3-text-red">The Tetragram Portal provides:</h4>
   <ol type="1">
-    <li>Take pictures of the products purchased.</li>
-    <li>Select from a list of ailments such as PTSD, epilepsy, and chronic pain.</li>
-    <li>Select the dispensary where the product was purchased.</li>
-    <li>Select the strain purchased.</li>
-    <li>Select the form of the cannabis being consumed (e.g. flower, concentrate, wax, or shatter).</li>
-    <li>Select the method in which the product was consumed (e.g. vape, pipe, topical, tincture).</li>
-    <IMG SRC="img/symptom.png" ALT="Screenshot of Tetragram app" WIDTH=150 HEIGHT=250 class="center">
+    <li>Dispensary owners and staff can view several reports on an individual's purchase habits, what they purchased, and more importantly...how it made the patient feel.</li>
+    <li>Provide better inventory management by knowing which strains are most popular amongst your customers.</li>
+    <li>Direct marketing campaigns, better engagement with customers.</li>
+    <li>The ability to up-sell and recommend new products based on a patient's preferences.</li>
+    <li>Have better understanding of how customers view your place of business by having access to our Dispensary Review data.</li>
+    <IMG SRC="img/analytics.jpg" ALT="Screenshot of Tetragram app" WIDTH=250 HEIGHT=250 class="center">
     </div>
 </div>
 </div>
@@ -111,7 +107,10 @@ habits.</p>
 <div class="w3-container w3-light-grey w3-padding-64">
   <div class="w3-row-padding">
     <div class="w3-col m6">
-      <h3 class="w3-border-teal w3-bottombar">The Solution? Tetragram. </h3>
+      <h3 class="w3-border-teal w3-bottombar">The Solution. Tetragram. </h3>
+      <p class="w3-xlarge w3-text-green">We live in a digital age where everything we do is easily accessible
+        via our cellphone and we expect instant gratification. Paperback
+        journals are cumbersome, easily lost and forgotten.</p>
       <p>Tetragram provides budtenders with the ability to view a patient’s
         previously logged sessions and have a clear understanding of what
         strain, form, etc. worked best in addressing the patients aliment.
