--- a/about.html
+++ b/about.html
@@ -99,7 +99,7 @@ habits.</p>
     <li>Direct marketing campaigns, better engagement with customers.</li>
     <li>The ability to up-sell and recommend new products based on a patient's preferences.</li>
     <li>Have better understanding of how customers view your place of business by having access to our Dispensary Review data.</li>
-    <IMG SRC="img/analytics.jpg" ALT="Screenshot of Tetragram app" WIDTH=250 HEIGHT=250 class="center">
+    <IMG SRC="img/analytics.jpg" ALT="Computer screen displaying analytical plots" WIDTH=250 HEIGHT=250 class="center">
     </div>
 </div>
 </div>
