--- a/about.html
+++ b/about.html
@@ -80,7 +80,7 @@ body, html {
       <p>Dispensaries can only view a patient’s purchase history through
         their point-of-sale systems (POS) at their dispensary and have no
         insight into the impact the product had on the patient.</p>
-      <p>Today, patients have two ways of keeping track of which cannabis products work best in addressing their ailments. The first is through memory, which we all know can be hit or miss. Second is by writing down the name of the product and its effect in the paperback journals provided by the dispensaries.</p>
+      <p>Today, patients have two ways of keeping track of which cannabis products work best in addressing their ailments. The first is through memory which we all know can be hit or miss. The second is by writing down the name of the product and its effect in the paperback journals provided by the dispensaries.</p>
 <p class="w3-xlarge w3-text-green">With the average dispensary seeing between 100-350 customers a day, it becomes very challenging for a budtender to provide a consultative approach for the patient.</p>
 <p>Most dispensaries use text messages to market new products and
 sales events; however, studies show patients do not engage with
@@ -99,7 +99,7 @@ habits.</p>
     <li>Direct marketing campaigns, better engagement with customers.</li>
     <li>The ability to up-sell and recommend new products based on a patient's preferences.</li>
     <li>Have better understanding of how customers view your place of business by having access to our Dispensary Review data.</li>
-    <IMG SRC="img/analytics.jpg" ALT="Computer screen displaying analytical plots" WIDTH=250 HEIGHT=250 class="center">
+    <IMG SRC="img/analytics.jpg" ALT="Computer screen displaying analytical plots." WIDTH=250 HEIGHT=250 class="center">
     </div>
 </div>
 </div>
