--- a/patients.html
+++ b/patients.html
@@ -73,14 +73,14 @@ body, html {
 <div class="w3-third">
 <h2 class="w3-border-teal w3-bottombar">The Problem.</h2>
 <IMG SRC="img/get-budding-72798.jpg" ALT="A person carefully weighing cannabis" WIDTH=100% HEIGHT=250>
-<p>There are hundreds of different cannabis strains and numerous ways cannabis can be consumed. With so many options to choose from, it makes deciding which cannabis strain will work best or achieve a particular affect, extremely difficult.</p>
+<p>There are hundreds of different cannabis strains and numerous ways cannabis can be consumed. With so many options to choose from, it makes deciding which cannabis strain will work best or achieve a particular affect extremely difficult.</p>
 </div>
 
 <div class="w3-third">
-<div class="w3-card w3-white"> 
+<div class="w3-card w3-white">
   <div class="w3-container">
   <h3 class="w3-opacity w3-xxlarge">Medical Use</h3>
-  <p>Patients utilizing medical cannabis ofte100%ind themselves on a journey of self-diagnosis. Deciding which cannabis strain will work best in treating an ailment can be intimidating for even the most seasoned cannabis user. </br></br>Cannabis affects everyone differently and consequently even expert recommendations can be unreliable.</p>
+  <p>Patients utilizing medical cannabis often find themselves on a journey of self-diagnosis. Deciding which cannabis strain will work best in treating an ailment can be intimidating for even the most seasoned cannabis user. </br></br>Cannabis affects everyone differently and consequently even expert recommendations can be unreliable.</p>
   <p class="w3-xlarge w3-text-green w3-xlarge">The average dispensary in mature markets sees between 100 - 350 customers a day.</p>
   <p>This makes it nearly impossible for a budtender to provide a consultative approach in helping a patient find a strain that will address their specific medical needs.</p>
   </div>
@@ -105,13 +105,13 @@ body, html {
 <div class="w3-row-padding w3-padding-64 w3-theme-l1 w3-light-grey" id="about">
   <div class="w3-third">
   <h2 class="w3-border-teal w3-bottombar">The Solution. Tetragram. </h2>
-  <p>Tetragram is designed to empower and enable recreational users and medical patients to journal their experiences. </br></br>For example, patients can list their symptoms and journal each treatment. One can list whether they smoked, ate or used a topical solution. </br></br>Since everyone's reaction and experience with cannabis is different, Tetragram creates a personal journal backed by data. </p>
+  <p>Tetragram is designed to empower and enable recreational users and medical patients to journal their experiences. </br></br>For example, patients can list their symptoms and journal each treatment. One can list whether they smoked, ate, or used a topical solution. </br></br>Since everyone's reaction and experience with cannabis is different, Tetragram creates a personal journal backed by data. </p>
   </div>
 
   <div class="w3-third">
   <div class="w3-card w3-light-grey">
     <div class="w3-container">
-    <p>For medical patients, this data will help patients focus more on the process of using cannabis as a method of treatment and tailoring it to the individual.  </br></br>The goal of Tetragram is to enable patients and simplify the process of self-diagnosis; making cannabis more affable for both patients and the medical community. Tetragram affords recreational users the ability to journal their personal experience with different strains.  </br></br>Later version of the application will incorporate a social stream and allow users to create groups, share information and interact with others.  </br></br>Empowering the cannabis community with knowledge and insight.</p>
+    <p>For medical patients, this data will help patients focus more on the process of using cannabis as a method of treatment and tailoring it to the individual.  </br></br>Tetragram's goal is to enable patients and simplify the process of self-diagnosis; making cannabis more affable for both patients and the medical community. Tetragram also affords recreational users the ability to journal their personal experience with different strains.  </br></br>Later version of the application will incorporate a social stream and allow users to create groups, share information, and interact with others.  </br></br>Empowering the cannabis community with knowledge and insight.</p>
     </div>
     </div>
   </div>
