--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@ body, html {
 
 <!-- Header  -->
 <header class="bgimg-1 w3-display-container w3-grayscale-min" id="home">
-  <div class="w3-display-left w3-text-white" style="padding:48px">
+  <div class="w3-display-left w3-text-white">
     <span class="w3-jumbo w3-hide-small">Empowered by Remedy.</span><br>
     <span class="w3-xxlarge w3-hide-large w3-hide-medium">For Medicinal and Recreational Users</span><br>
     <span class="w3-large">To empower the cannabis community with the ability to keep a </br> digital journal that records their experiences with cannabis products.</span>
